# openscope

./: .env.local.example  .gitignore  README.md  community-post.md  discord-group-post.md  next.config.js  package-lock.json  package.json  pipeline.md  processor-architecture.md  supabase-schema.sql  tailwind.config.js  tsconfig.tsbuildinfo
backend/: .env.example  pyproject.toml  render.yaml  run.sh
backend/openscope_backend/: __init__.py  config.py  main.py
backend/openscope_backend/routers/: __init__.py  ai.py  api.py  github.py  pipelines.py  plugins.py  sample_plugins.py  templates.py
backend/sample-plugins/kaleido-scope-test/: README.md  pyproject.toml
backend/sample-plugins/kaleido-scope-test/src/kaleido_scope/: __init__.py
backend/sample-plugins/kaleido-scope-test/src/kaleido_scope/pipelines/: pipeline.py  schema.py
backend/sample-plugins/kaleido-scope-test/tests/: conftest.py  test_kaleido_scope_pipeline.py
backend/sample-plugins/scope_yolo_mask_test/: .gitignore  README.md  pyproject.toml
backend/sample-plugins/scope_yolo_mask_test/src/yolo_mask/: __init__.py
backend/sample-plugins/scope_yolo_mask_test/src/yolo_mask/pipelines/: pipeline.py  schema.py
backend/sample-plugins/scope_yolo_mask_test/tests/: test_yolo_mask_pipeline.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AIAssistant.tsx  AuthModal.tsx  CodeEditor.tsx  Header.tsx  NodeCanvas.tsx  NodePalette.tsx  OpenModal.tsx  PreviewPanel.tsx  PropertiesPanel.tsx  SaveModal.tsx  ScopeNode.tsx  TemplateModal.tsx  TourModal.tsx
src/context/: PipelineSchemasContext.tsx
(+12 files in other folders)
