[project]
name = "openscope-backend"
version = "0.1.0"
description = "OpenScope Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "groq>=0.4.0",
    "pygithub>=2.1.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
